# Real-time-Conversation-Transcription-and-Intent-based-Summarization-System

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
backend/: model_manager.py
backend/models/: model2_wav2vec2.py  model3_whisper.py
backend/models/model_1/: features.py  infer.py  model.py  text.py  train.py  train_model1_colab_kaggle.ipynb
backend/services/: translation.py
backend/utils/: device.py
frontend/: app.py
model_1/: README.md  infer.py  metrics.py  train.py  train_model1_colab_kaggle.ipynb
src/: App.jsx
src/components/common/: LanguageSelect.jsx
src/components/conversation/: AudioWaveform.jsx  RecorderControls.jsx  SummaryResult.jsx  TranscriptPanel.jsx
src/components/layout/: AppShell.jsx
src/modules/api-services/: conversationApiService.js
src/modules/audio-recording/: audioRecordingService.js
src/modules/conversation-history/: conversationHistoryService.js
src/modules/intent-analysis/: intentAnalysisService.js
src/modules/speech-to-text/: speechToTextService.js
src/modules/summarization/: summarizationService.js
src/modules/translation/: translationService.js
src/pages/: ConversationDetailPage.jsx  ConversationPage.jsx  DashboardPage.jsx  HistoryPage.jsx
src/styles/: index.css
